2002-03-11  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in, gtkdoc-mkdb.in: Create docs for signals on interfaces.

2002-02-01  Damon Chaplin  <damon@ximian.com>

	* configure.in: check for openjade or jade. Patch from Stefan Kost
	<kost@imn.htwk-leipzig.de>.

	* gtkdoc-mkhtml.in: use @JADE@ so the correct version of jade is used.

	* autogen.sh: commented out autoheader since we don't have a config.h.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Released 0.9.

2002-02-01  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am: added SCANOBJ_OPTIONS in case the module needs
	to pass options to gtkdoc-scanobj or gtkdoc-scangobj.

2002-01-24  Damon Chaplin  <damon@ximian.com>

	* tools/gtk-doc.el: added Zucchi's emacs lisp for automatically adding
	skeleton comment blocks above functions. Very handy!

2002-01-23  Damon Chaplin  <damon@ximian.com>

	* configure.in: bumped the version to 0.9, so GTK+ can depend on this
	if it wants to.

	* gtkdoc-scangobj.in: we now default to calling g_type_init() to
	initialize the type system, rather than gtk_init(). This means you
	don't need an X connection to build the docs any more. Hurrah!
	Also added a '--type-init-func' argument so you can change the
	function to be called. GTK+ uses --type-init-func="gtk_type_init(0)".

	* gtkdoc-scan.in (ScanHeader): removed 'Found object' debug message.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Released 0.8.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* Makefile.am (EXTRA_DIST): added gtk-doc.dcl to EXTRA_DIST.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: Reverted jacob's patch for this release, since
	it breaks GTK+ and possibly other packages. I'll re-apply it after
	the release, so we can fix everything in CVS.

2002-01-18  jacob berkman  <jacob@ximian.com>

	* gtkdoc-scangobj.in: default to calling g_type_init(), remove
	--nogtkinit argument and replace with a more flexible
	--type-init-func
